--- a/src/components/PokemonList/PokemonList.css
+++ b/src/components/PokemonList/PokemonList.css
@@ -49,3 +49,11 @@
   margin-left: 18px;
   white-space: nowrap;
 }
+
+.pokemon-list-msg {
+  color: #fff;
+  text-align: center;
+  opacity: 0.6;
+  font-size: 0.9em;
+  padding: 12px 0;
+}
